--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Your Website</title>
+  <title>P1 Bio: Kayla Lee</title>
 	
  <link rel="icon" href="favicon.ico">	
  
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/grid.css">				
-  <link rel="stylesheet" href="css/styles.css">	
+  <link rel="stylesheet" href="css/styles.css">
+
+  <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 	
 </head>
 <body>
@@ -16,7 +18,7 @@
 	<div class="container showgrid">
 		
 		<!-- Your Content -->
-		<h1>Your Website</h1>
+		<h1>Kayla Lee</h1>
 
 		<!-- Clearfix -->
 		<div class="clear"></div>
