--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 		<!-- Your Content -->
 		<h1>Kayla Lee</h1>
 
+		<p>Page Designer at The Easterner. dfgfghgfhfghgeirdhguvdhfejnvndxfdgftrdgjdfoglvjfglvknedshrdgofghdxklfjdlskfjdsgiorjbgflknvdjrgthisedfkdljflxkgjrigdjbvhfclvkdfg.</p>
+
 		<!-- Clearfix -->
 		<div class="clear"></div>
 
