--- a/index.html
+++ b/index.html
@@ -16,11 +16,46 @@
 <body>
 	
 	<div class="container showgrid">
-		
-		<!-- Your Content -->
-		<h1>Kayla Lee</h1>
 
-		<p>Page Designer at The Easterner. dfgfghgfhfghgeirdhguvdhfejnvndxfdgftrdgjdfoglvjfglvknedshrdgofghdxklfjdlskfjdsgiorjbgflknvdjrgthisedfkdljflxkgjrigdjbvhfclvkdfg.</p>
+		<div class="grid_6 alpha">
+		
+			<!-- Your Content -->
+			<h1>Kayla Lee</h1>
+
+			<p>Page Designer at The Easterner. dfgfghgfhfgh geirdhguv dhfejn vndxfdgftrdgjdf oglvjfglvkn edshrdgofghdxk lfjdlskf  jdsgi orjbgfl knvdjrgthised fkdljflxkgjrig djbvhfclvkdfg.</p>
+
+		</div>
+
+		<div class="grid_6 omega">
+
+			<h2>Video</h2>
+
+			<iframe width="560" height="315" src="http://www.youtube.com/embed/lXX7dRULFaE" frameborder="0" allowfullscreen></iframe>
+
+
+		</div>
+
+		<!---Second Row, 1st Colum -->
+
+
+		<div class="grid_4 alpha">
+			<h3>Audio</h3>
+			<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/18608884&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+		</div>
+
+
+		<div class="grid_4">
+			<h3>Map</h3>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21568.20816854407!2d-117.58005344999998!3d47.489406449999976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549e393549e827fd%3A0x71e83d74b343adcd!2sCheney%2C+WA+99004!5e0!3m2!1sen!2sus!4v1412879076460" width="100%" height="450" frameborder="0" style="border:0"></iframe>
+		</div>
+
+		<div class="grid_4 omega">
+			<h3>More Info</h3>
+		</div>
+
+
+
+
 
 		<!-- Clearfix -->
 		<div class="clear"></div>
